--- a/templates/todo.html
+++ b/templates/todo.html
@@ -88,7 +88,7 @@ block content %}
                 </p>
                 <small class="text-muted">
                   <i class="fas fa-calendar me-1"></i>
-                  Created: {{ todo.created_at }}
+                  Created: {{ todo.created_at | datetime_format }}
                 </small>
 
                 <div class="mt-3">
